# joypad-os-ds4

./: .gitignore  Makefile  README.md  mkdocs.yml  package.json  vercel.json
.githooks/: pre-commit
.github/workflows/: build.yml  docs.yml  web-config.yml
docs/: BUILD.md  CNAME  INSTALLATION.md  index.md
docs/adapters/: 3do.md  bluetooth.md  n64.md  native-input.md  neogeo.md  pcengine.md  usb.md
docs/apps/: BT2USB.md  NES2USB.md  USB2DC.md  USB2GC.md  USB2NEO.md  USB2USB.md
docs/architecture/: layers.md  overview.md  ps4_auth.md
docs/consoles/: NEOGEO.md
docs/getting-started/: building.md  installation.md
docs/hardware/: boards.md  controllers.md  diy.md  wiring.md
docs/protocols/: NUON_POLYFACE.md
nrf/: CMakeLists.txt  Makefile  prj.conf  prj_btusb2usb.conf  prj_controller_btusb.conf
nrf/src/: display_i2c_nrf.c  main.c  stubs_peripheral.c
src/: CMakeLists.txt  tusb_config.h
src/apps/bt2n64/: app.c  app.h  app_config.h  profiles.h
src/apps/bt2usb/: app.c  app_config.h
src/apps/controller_btusb/: app.c  app.h
src/apps/gc2usb/: app_config.h
src/apps/n642dc/: app.c  app_config.h
src/apps/n642nuon/: app.c
src/apps/n642usb/: app_config.h
src/apps/snes23do/: app_config.h
src/apps/snes2usb/: app.c  app_config.h  profiles.h
src/apps/usb2dc/: app_config.h
src/apps/usb2gc/: app_config.h  profiles.h
src/apps/usb2loopy/: app_config.h
src/apps/usb2n64/: app.c  app.h  app_config.h  profiles.h
src/apps/usb2neogeo/: app.c  app.h  app_config.h  profiles.h
src/apps/usb2nuon/: app_config.h
src/apps/usb2pce/: app_config.h
src/apps/usb2usb/: app.c  app_config.h
src/apps/wifi2usb/: app.c  app_config.h
src/boards/: build_waveshare_rp2350_usb_a.sh
src/bt/bthid/: bthid.c  bthid.h  bthid_registry.c
src/bt/bthid/devices/generic/: bthid_gamepad.c
src/bt/bthid/devices/vendors/google/: stadia_bt.c
src/bt/bthid/devices/vendors/microsoft/: xbox_ble.c  xbox_bt.c
src/bt/bthid/devices/vendors/nintendo/: switch2_ble.c  switch_pro_bt.c  wii_u_pro_bt.c  wiimote_bt.c  wiimote_bt.h
src/bt/bthid/devices/vendors/sony/: ds3_bt.c  ds4_bt.c  ds5_bt.c
src/bt/btstack/: btstack_host.c
src/bt/transport/: bt_transport_nrf.c
src/core/: input_event.h  output_interface.h
src/core/router/: router.c  router.h
src/core/services/button/: button.c
src/core/services/codes/: codes.c  codes.h
src/core/services/display/: display.c  display.h
src/core/services/leds/: leds.c
src/core/services/players/: feedback.c  manager.c  manager.h
src/core/services/profiles/: profile.c  profile.h
src/core/services/storage/: flash.c  flash.h
src/native/device/3do/: 3do_device.c
src/native/device/gamecube/: gamecube_device.c
src/native/device/loopy/: loopy_device.c
src/native/device/n64/: n64_buttons.h  n64_device.c  n64_device.h
src/native/device/neogeo/: neogeo_buttons.h  neogeo_device.c  neogeo_device.h
src/native/device/nuon/: nuon_device.c  nuon_device.h
src/native/device/uart/: uart_device.c
src/native/host/3do/: 3do_host.c
src/native/host/arcade/: arcade_host.c
src/native/host/gc/: gc_host.c
src/native/host/n64/: n64_host.c
src/native/host/snes/: snes_host.c
src/native/host/uart/: uart_host.c
src/pad/: pad_input.c
src/platform/nrf/: platform_i2c_nrf.c  platform_nrf.c
src/usb/usbd/: usbd.c  usbd.h  usbd_mode.h
src/usb/usbd/cdc/: cdc.c  cdc.h  cdc_commands.c  cdc_commands.h  cdc_protocol.h
src/usb/usbd/descriptors/: kbmouse_descriptors.h  pcemini_descriptors.h  ps4_descriptors.h  sinput_descriptors.h
src/usb/usbd/drivers/: tud_gc_adapter.c  tud_gc_adapter.h
src/usb/usbd/kbmouse/: kbmouse.c  kbmouse.h
src/usb/usbd/modes/: gc_adapter_mode.c  hid_mode.c  kbmouse_mode.c  pcemini_mode.c  ps3_mode.c  ps4_mode.c  psclassic_mode.c  sinput_mode.c  switch_mode.c  xac_mode.c  xbone_mode.c  xid_mode.c  xinput_mode.c
src/usb/usbh/hid/: hid.c
src/usb/usbh/hid/devices/generic/: hid_gamepad.c  hid_keyboard.c  hid_mouse.c  sinput_host.c
src/usb/usbh/hid/devices/vendors/8bitdo/: 8bitdo_bta.c  8bitdo_m30.c  8bitdo_pce.c
src/usb/usbh/hid/devices/vendors/dragonrise/: dragonrise.c
src/usb/usbh/hid/devices/vendors/google/: google_stadia.c
src/usb/usbh/hid/devices/vendors/hori/: hori_horipad.c  hori_pokken.c
src/usb/usbh/hid/devices/vendors/logitech/: logitech_wingman.c
src/usb/usbh/hid/devices/vendors/microsoft/: ms_sidewinder_dualstrike.c
src/usb/usbh/hid/devices/vendors/misc/: triple_adapter_v1.c  triple_adapter_v2.c
src/usb/usbh/hid/devices/vendors/nintendo/: gamecube_adapter.c  switch2_pro.c  switch_pro.c
src/usb/usbh/hid/devices/vendors/sega/: sega_astrocity.c
src/usb/usbh/hid/devices/vendors/sony/: sony_ds3.c  sony_ds4.c  sony_ds4.h  sony_ds5.c  sony_ds5.h  sony_psc.c
src/usb/usbh/xinput/: xinput.c
src/wifi/jocp/: jocp_input.c  wifi_transport.c  wifi_transport.h
tools/jocp-test-client/: README.md  server.js
tools/jocp-test-client/public/: index.html
tools/web-config/: app.js  cdc-protocol.js  index.html  package-lock.json  package.json  vite.config.js
tools/web-config/src/: app.js  cdc-protocol.js  index.html  main.js  style.css
